# dsdl-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_zh-CN.md  isort.toml  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: dev.yml  preview.yml  test_pipeline.yml
cli/: cli.py  odl-cli.bat  odl-cli.sh  readme.md
cli/commands/: __init__.py  __version__.py  cd.py  cd.py.bak  cdout.py  cmdbase.py  config.py  const.py  example.py  get.py  info.py  inspect.py  ls.py  rm.py  search.py  select.py  studio.py
cli/commons/: Storage.py  argument_parser.py  exceptions.py  loghandler.py  stdio.py  storage_builder.py
cli/resources/: cd.example  cdout.example  commands.json  config.example  default_cli_cfg.json  example.example  get.example  info.example  inspect.example  ls.example  rm.example  select.example  studio.example
cli/utils/: admin.py  plot.py  query.py
cli/utils/minio_ops/: ops.py
cli/utils/oss_ops/: ops.py
cli/utils/views/: general_app.py  view.py  view_from_inspect.py
cli/utils/views/cifar-10/: cifar-10.py
cli/utils/views/cifar-10-auto/: cifar-10-auto.py
cli/utils/views/coco-demo/: coco-demo.py
cli/utils/views/coco-demo/src/: types.py
cli/utils/views/coco-demo/src/constants/: colors.py
demo/: README.md  coco-class-domain.yaml  coco_demo.py  coco_demo.yaml  config.py  data_field.py  object-detection.yaml  visualize_demo.py  visualize_demo_debug.py  voc_config.py
descr_examples/computer-vision/object-detection/VOC2012Detection/: convert2dsdl.py
descr_examples/computer-vision/object-detection/VOC2012Detection/demo1/: .voc2012-detection-demo1.yaml.swp
descr_examples/computer-vision/object-detection/VOC2012Detection/demo2/: README.md  cv_object-detection.yaml  data_samples.yaml  voc2012-detection-demo2_0.yaml  voc_class-dom.yaml
docs/: index.md
docs/User-guide/: CLI-examples.md  Developer.md
dsdl/: __init__.py  __version__.py  cli.py  dataset.py  exception.py  parser.py  warning.py
dsdl-docs/: mkdocs.yml
dsdl/config/: config.py  utils.py
dsdl/converter/: mllm.py  utils.py
dsdl/dataset/: __init__.py  base_dataset.py  check_dataset.py  demo_dataset.py  detection_dataset.py  mmdet_dataset.py  wrapper_dataset.py
dsdl/dataset/utils/: __init__.py  check.py  commons.py  parser.py  visualizer.py
dsdl/dsdl_library/: Image_Classification-template.yaml  Instance_Segmentation_polygon-template.yaml  Instance_Segmentation_segmap-template.yaml  Keypoint_Detection-template.yaml  OCR_detection-template.yaml  OCR_end2end-template.yaml  OCR_recog-template.yaml  OCR_segmap-template.yaml  Object_Detection-template.yaml  Object_Tracking-template.yaml  Panoptic_Segmentation-template.yaml  Rotated_Object_Detection-template.yaml  Semantic_Segmentation-template.yaml  coco-class-domain.yaml  object-detection.yaml  voc-class-domain.yaml
dsdl/dsdl_library/class/: cifar10-class-dom.yaml  cifar100-class-dom.yaml  imagenet-class-dom.yaml  mnist-class-dom.yaml
dsdl/dsdl_library/task/: cifar100-struct.yaml  classification-template.yaml  object-detection.yaml
dsdl/dsdl_py_library/: CIFAR100_train_data.py  CIFAR10_test_data.py  CIFAR10_train_data.py  IMAGENET_train_data.py  MNIST_train_data.py  example.py
dsdl/fields/: __init__.py  base_field.py  base_unstructured_field.py  generic.py  special.py  struct.py  unstructure.py
dsdl/geometry/: __init__.py  attrbutes.py  base_geometry.py  box.py  box3d.py  class_domain.py  class_domain_attributes.py  classdomain.py  insmap.py  instanceid.py  keypoint.py  label.py  media.py  params_placeholder.py  pointcloud.py  polygon.py  registry.py  rotate_box.py  segmap.py  shape.py  text.py  uniqueid.py  utils.py  video.py  video_utils.py
dsdl/objectio/: __init__.py  ali_oss.py  aws_oss.py  base.py  ceph.py  local.py
dsdl/parser/: __init__.py  parse_class.py  parse_class_abandon.py  parse_field.py  parse_params.py  parser.py  utils.py
dsdl/sam_with_dsdl/: .gitignore  README.md  data_cfgs.json  evaluation_sa.ipynb  evaluation_sa.py
dsdl/server/: main.py  scheme.py
dsdl/server/routers/: api_parser.py
dsdl/test/: __init__.py  config.py  conftest.py  test_pipeline.py
dsdl/tools/: README.md  __init__.py  check.py  commons.py  tunas2dsdl_detection_demo.py  view.py  visualize.py
dsdl/tools/studio_view/: __init__.py  base_studio_view.py  local_studio_view.py  remote_studio_view.py
dsdl/tools/tunas2dsdl/: __init__.py  detection_parse.py  generate.py
dsdl/types/: __init__.py  class_domain.py  field.py  generic.py  registry.py  special.py  struct.py  unstructure.py
dsdlsdk/: __init__.py  config.py  datarepo.py  dataset.py  downloader.py  storage.py
dsdlsdk/download/: download_config.py
dsdlsdk/exception/: exception.py
examples/computer-vision/image-classification/: README.md  dsdl_yaml_script.py
examples/computer-vision/image-classification/CIFAR10/: struct_sample.yaml  test_data.yaml  train_data.py  train_data.yaml
examples/computer-vision/image-classification/CIFAR100/: test_data.yaml  train_data.yaml
examples/computer-vision/image-classification/IMAGENET/: struct_sample.yaml  test_data.yaml  train_data.py  train_data.yaml  val_data.yaml
examples/computer-vision/image-classification/MNIST/: class_dom.yaml  struct_sample.yaml  test_data.yaml  train_data.py  train_data.yaml
examples/computer-vision/image-classification/test/: struct.yaml
examples/computer-vision/object-detection/COCO2017Detection/: README.md  config.py  convert2dsdl.py  val.yaml  visualize_debug_demo.py  visualize_demo1.py  visualize_demo2.py  visualize_demo3.py  visualize_demo_debug.py
examples/computer-vision/object-detection/COCO2017Detection/demo1/: coco_val_demo.yaml  coco_val_demo_v2.yaml  config.py
examples/computer-vision/object-detection/VOC2012Detection/: README.md  config.py  convert2dsdl.py
tests/: coco_demo1_config.yaml  coco_demo2_config.yaml  config.py  conftest.py  helloworld.py  helloworld.yaml  helloworld_config.yaml  test_types.py
tests/cli/: cd_test.py  test_cd.py  test_cd.sh
tests/helloworld_demo/: data_field.py  helloworld.yaml
(+59 files in other folders)
